[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Images/Ores/gold/large.png" type="Texture" id=1]
[ext_resource path="res://World/Objects/Nature/Ores/LargeOre.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=9]
radius = 21.2354
height = 30.4705

[sub_resource type="CapsuleShape2D" id=12]
radius = 14.1176
height = 7.05882

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 23.2031, 34.5 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 27.3943, 21.0175 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("BigOre:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SmallOre:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BigHurtBox/bigHurtBox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BigMovementCollisionBox/BigMovementBox:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("SmallHurtBox/smallHurtBox:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("SmallMovementCollisionBox/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("BigOre:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SmallOre:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BigMovementCollisionBox/BigMovementBox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BigHurtBox/bigHurtBox:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("SmallHurtBox/smallHurtBox:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
length = 0.4
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("BigOre:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.15, 0.25, 0.35, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -12 ), Vector2( 3, -12 ), Vector2( -2, -12 ), Vector2( 1, -12 ), Vector2( -1, -12 ), Vector2( 0, -12 ) ]
}

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath("SmallOre:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SmallHurtBox/smallHurtBox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SmallMovementCollisionBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=6]
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("SmallOre:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.15, 0.25, 0.35, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -12 ), Vector2( 3, -12 ), Vector2( -2, -12 ), Vector2( 1, -12 ), Vector2( -1, -12 ), Vector2( 0, -12 ) ]
}

[node name="OreObjectLarge" type="Node2D"]
modulate = Color( 1.32, 1.32, 1.32, 1 )
scale = Vector2( 0.85, 0.85 )
script = ExtResource( 2 )

[node name="BigOre" type="Sprite" parent="."]
position = Vector2( 0, -12 )
texture = ExtResource( 1 )

[node name="SmallOre" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -12 )

[node name="BigMovementCollisionBox" type="StaticBody2D" parent="."]
visible = false
position = Vector2( -1, -28 )

[node name="BigMovementBox" type="CollisionShape2D" parent="BigMovementCollisionBox"]
position = Vector2( 1, 40.9412 )
rotation = -1.5708
shape = SubResource( 9 )

[node name="SmallMovementCollisionBox" type="StaticBody2D" parent="."]
visible = false
position = Vector2( -64.7059, -57.6471 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SmallMovementCollisionBox"]
position = Vector2( 64.7059, 75.2941 )
rotation = -1.5708
shape = SubResource( 12 )

[node name="BigHurtBox" type="Area2D" parent="."]
visible = false
position = Vector2( -1, -28 )
collision_layer = 262160
collision_mask = 0

[node name="bigHurtBox" type="CollisionShape2D" parent="BigHurtBox"]
position = Vector2( 2.5, 40.7969 )
rotation = -1.5708
shape = SubResource( 1 )

[node name="SmallHurtBox" type="Area2D" parent="."]
position = Vector2( 1.49254, -55.2239 )
collision_layer = 262160
collision_mask = 0

[node name="smallHurtBox" type="CollisionShape2D" parent="SmallHurtBox"]
position = Vector2( -1.49254, 70.518 )
shape = SubResource( 11 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/big_ore_break = SubResource( 3 )
anims/big_ore_hit_right = SubResource( 2 )
anims/small_ore_break = SubResource( 7 )
anims/small_ore_hit_right = SubResource( 6 )

[node name="SoundEffects" type="AudioStreamPlayer2D" parent="."]
volume_db = -12.0

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( 0.588236, 2.35294 )
scale = Vector2( 4.29412, 3.64706 )

[node name="NavigationObstacle2D" type="NavigationObstacle2D" parent="."]
estimate_radius = false
radius = 50.0

[connection signal="area_entered" from="BigHurtBox" to="." method="_on_BigHurtBox_area_entered"]
[connection signal="area_entered" from="SmallHurtBox" to="." method="_on_SmallHurtBox_area_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
